--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "erisfire-backend",
+  "name": "HTML Developer JD & Test_ Deloitte",
   "version": "1.0.0",
   "description": "It's back-end application for erisafire project.",
   "main": "main.js",
